// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem matches its snapshot - complete 1`] = `
<li
  className="complete"
>
  Drink Coffee
</li>
`;

exports[`TodoItem matches its snapshot - not complete 1`] = `
<li
  className=""
>
  Drink Coffee
</li>
`;
